Change the files according to errors.